--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mitchelle Anduru - UI/UX Designer & Front-end Engineer</title>
+    <title>Cursor Ripple Animation</title>
     <style>
         :root {
             
